Issue #507 - Refactored fix broken UI when start UA
Paring with bwagner

--- a/web-ui/app/scss/styles.scss
+++ b/web-ui/app/scss/styles.scss
@@ -301,7 +301,7 @@ section {
           background: darken(white, 5%);
         }
       }
-      &:before {
+      form:before {
         font-family: "FontAwesome";
         content: "\f002";
         position: absolute;
